deploy/retrieveUnpackaged/objects/SFDC_Channel_Budget__c.object
<CustomObject>
    <description>Allocate multiple requests and claims against a specific budget. Report allocated budget, approved claims, available balance, and unclaimed requests.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allocated_Budget__c</fullName>
        <description>Total amount that is allocated to this buget. Manual entry.</description>
        <label>Allocated Budget</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_Claims__c</fullName>
        <description>Sum of all Approved Claims. Calculated field. Do not enter manually .</description>
        <label>Approved Claims</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_Request__c</fullName>
        <description>Sum of all approved marketing requests.  Calculated field. Do not manually enter.</description>
        <label>Approved Requests</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Available_Budget__c</fullName>
        <description>Allocated less committed. (i.e. initial budgeted amount less the the sum of approved requests).</description>
        <formula>Allocated_Budget__c  -  Approved_Request__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Committed_To_Date__c</fullName>
        <formula>Approved_Request__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requests Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Refresh_Date__c</fullName>
        <description>The date &amp; time the checkbook was last refreshed.</description>
        <label>Last Refresh Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>MDF Budgets</relationshipLabel>
        <relationshipName>MDF_Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Refresh__c</fullName>
        <description>Refreshes the budget balances by adding up the approved requests and claims from the related lists.</description>
        <formula>HYPERLINK(&quot;/servlet/servlet.Integration?lid=01N500000004dkx&amp;eid=&quot; &amp; Id , IMAGE(&quot;/servlet/servlet.FileDownload?file=01550000000BPMq&quot;, &quot;Refresh Budget Balances&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Refresh Balances</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unclaimed__c</fullName>
        <description>Total committed less total claimed to date.</description>
        <formula>Approved_Request__c  -  Approved_Claims__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unclaimed Requests</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nbsp2__c</fullName>
        <description>Layout spacer</description>
        <label>&amp;nbsp;&amp;nbsp;</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbsp__c</fullName>
        <description>Layout spacer</description>
        <label>&amp;nbsp;</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>MDF Budget</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Allocated_Budget__c</columns>
        <columns>Approved_Request__c</columns>
        <columns>Available_Budget__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AvailableBudget</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Allocated_Budget__c</columns>
        <columns>Approved_Request__c</columns>
        <columns>Available_Budget__c</columns>
        <filterScope>Everything</filterScope>
        <label>Available Budget</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>OverspentBudget</fullName>
        <columns>NAME</columns>
        <columns>Allocated_Budget__c</columns>
        <columns>Approved_Request__c</columns>
        <columns>Available_Budget__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Available_Budget__c</field>
            <operation>lessThan</operation>
            <value>USD 0</value>
        </filters>
        <label>Overspent Budget</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>UnclaimedRequests</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Approved_Request__c</columns>
        <columns>Approved_Claims__c</columns>
        <columns>Unclaimed__c</columns>
        <filterScope>Everything</filterScope>
        <label>Unclaimed Requests</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>MDF Budget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MDF Budgets</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>